# ComfyUI-MVAdapter

./: README.md  nodes.py  pyproject.toml  requirements.txt  utils.py
mvadapter/pipelines/: pipeline_mvadapter_i2mv_sdxl.py
mvadapter/schedulers/: scheduling_shift_snr.py
workflows/: i2mv_sdxl_diffusers.json  i2mv_sdxl_ldm.json  i2mv_sdxl_ldm_lora.json  t2mv_sdxl_diffusers.json  t2mv_sdxl_ldm.json  t2mv_sdxl_ldm_controlnet.json  t2mv_sdxl_ldm_lora.json
